# MaD-Tensile-Tester

./: .gitignore  .gitmodules  README.md  curve.gcode  effect_sizes23.xlsx  shutdown.py
Firmware/MaD_Firmware/: .gitignore  CMakeLists.txt  README.md  makefile  makefile - Windows  platformio.ini
Firmware/MaD_Firmware/.VSCodeCounter/2021-11-10_20-54-33/: details.md  results.md  results.txt
Firmware/MaD_Firmware/.VSCodeCounter/2022-03-29_18-47-43/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md
Firmware/MaD_Firmware/.VSCodeCounter/2022-03-29_18-48-02/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
Firmware/MaD_Firmware/.VSCodeCounter/2022-03-29_18-48-12/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
Firmware/MaD_Firmware/.VSCodeCounter/2022-03-29_18-48-27/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
Firmware/MaD_Firmware/Librarys/: ._MCP23017  ._MotionPlanning
Firmware/MaD_Firmware/Librarys/Communication/: list.h  list.x  queue.h  queue.x
Firmware/MaD_Firmware/Librarys/DS3231/: DS3231.c  DS3231.cpp  DS3231.h
Firmware/MaD_Firmware/Librarys/DYN4/: DYN.c  DYN.h  DYN4.c  DYN4.h  DYN4.lst
Firmware/MaD_Firmware/Librarys/Encoder/: Encoder.c  Encoder.h  Encoder.spin  EncoderAPI.c  EncoderAPI.h
Firmware/MaD_Firmware/include/: Error.h  IOBoard.h  Images.h  MaD.h  Motion.h  State.h  Style.h
Firmware/MaD_Firmware/lib/JSON/: JSON.c  (+1 more)
Firmware/MaD_Firmware/src/: MaD.cpp  Motion.c  Motion.cogcxx  Motion.cpp  main.cpp
(+528 files in other folders)
